logs/dag_id=cryptocurrencies_etl/run_id=manual__2024-09-11T11:54:40.221424+00:00/task_id=create_table_task/attempt=1.log
[2024-09-11T12:15:01.471+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-09-11T12:15:01.701+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: cryptocurrencies_etl.create_table_task manual__2024-09-11T11:54:40.221424+00:00 [queued]>
[2024-09-11T12:15:01.707+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: cryptocurrencies_etl.create_table_task manual__2024-09-11T11:54:40.221424+00:00 [queued]>
[2024-09-11T12:15:01.708+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2024-09-11T12:15:01.727+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): create_table_task> on 2024-09-11 11:54:40.221424+00:00
[2024-09-11T12:15:01.737+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=66) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-09-11T12:15:01.738+0000] {standard_task_runner.py:63} INFO - Started process 69 to run task
[2024-09-11T12:15:01.742+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'cryptocurrencies_etl', 'create_table_task', 'manual__2024-09-11T11:54:40.221424+00:00', '--job-id', '18', '--raw', '--subdir', 'DAGS_FOLDER/dag_etl.py', '--cfg-path', '/tmp/tmp3xl110hr']
[2024-09-11T12:15:01.745+0000] {standard_task_runner.py:91} INFO - Job 18: Subtask create_table_task
[2024-09-11T12:15:01.801+0000] {task_command.py:426} INFO - Running <TaskInstance: cryptocurrencies_etl.create_table_task manual__2024-09-11T11:54:40.221424+00:00 [running]> on host e90ab63fed78
[2024-09-11T12:15:01.914+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='cryptocurrencies_etl' AIRFLOW_CTX_TASK_ID='create_table_task' AIRFLOW_CTX_EXECUTION_DATE='2024-09-11T11:54:40.221424+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-09-11T11:54:40.221424+00:00'
[2024-09-11T12:15:01.917+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-09-11T12:15:02.089+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-09-11T12:15:02.090+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/modules/toRedshift.py", line 21, in create_table_if_not_exists
    cur.execute(create_table_query)
psycopg2.errors.SyntaxError: syntax error at or near "gianni_ev93_coderhouse"
LINE 2: ...CREATE TABLE IF NOT EXISTS gianni_ev93_coderhouse gianni_ev9...
                                                             ^

[2024-09-11T12:15:02.098+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=cryptocurrencies_etl, task_id=create_table_task, run_id=manual__2024-09-11T11:54:40.221424+00:00, execution_date=20240911T115440, start_date=20240911T121501, end_date=20240911T121502
[2024-09-11T12:15:02.112+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 18 for task create_table_task (syntax error at or near "gianni_ev93_coderhouse"
LINE 2: ...CREATE TABLE IF NOT EXISTS gianni_ev93_coderhouse gianni_ev9...
                                                             ^
; 69)
[2024-09-11T12:15:02.156+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-09-11T12:15:02.164+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
